# step-import

./: .replit  README.md  main.py  pyproject.toml  replit.nix  test.py  test2.py
attached_assets/: Pasted--Copyright-2010-2014-Thomas-Paviot-tpaviot-gmail-com-This-file-is-part-of-pythonOCC--1736011925151.txt  Pasted-An-error-occurred-Task-Task-pending-name-Task-103-coro-elegantly-launch-locals-launch-it-ru-1735996530883.txt
sample data/: arch.stp  simple.stp
