[project]
name = "repl-nix-step-import"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.5.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pyvista>=0.44.2",
    "scipy>=1.15.0",
    "streamlit>=1.41.1",
    "pythonocc-core>=7.7.0",
]
